# OptionTraderCDX

./: .env.example  .gitignore  POC-Plan.txt  README.md  package-lock.json  pyproject.toml
n8n/: options-trader-poc-workflow.json
src/options_trader_poc/: __init__.py  api.py  app.py  config.py  db.py  journal.py  models.py  repository.py  risk.py  service.py  strategy.py  tradier.py
tests/: test_service.py  test_strategy.py  test_tradier.py
