[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-trader-poc"
version = "0.1.0"
description = "Options trader proof-of-concept service with Tradier paper-trading integration."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.35,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.11,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
